# api-rest-musica

./: Cargo.toml
src/: main.rs
src/config/: config.rs
src/controller/: album_controller.rs  artista_controller.rs  cancion_controller.rs  mod.rs  playlist_controller.rs  usuario_streaming_controller.rs
src/models/: album.rs  artistas.rs  cancion.rs  mod.rs  playlist.rs  usuario_streaming.rs
src/repository/: album_repository.rs  artista_repository.rs  artistas_repository.rs  cancion_repository.rs  mod.rs  playlist_repository.rs  usuario_streaming_repository.rs  usuariostreaming_repository.rs
src/service/: album_service.rs  artista_service.rs  cancion_service.rs  mod.rs  playlist_service.rs  usuario_streaming_service.rs  usuariostreaming_service.rs
