[package]
name = "api_musica"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
hyper = "1.10.0"
